added new project

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1457,7 +1457,6 @@
 					transition: background-color .2s ease-in-out;
 					background-color: inherit;
 					border-radius: 6px;
-					box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
 					color: #2E2E2E !important;
 					display: block;
 					font-size: 26px;
@@ -1486,7 +1485,7 @@
 					background-color: #006599;
 				}
 
-				ul.social li a.fa-tumblr {
+				ul.social li a.fa-anchor {
 					background-color: #51718A;
 				}
 
