--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1591,8 +1591,10 @@
 
 		.wrapper.style1 {
 			background-image: none;
-			background-color: #fff;
-		}
+			background: #50C9C3; /* fallback for old browsers */
+			background: -webkit-linear-gradient(to left, #50C9C3 , #96DEDA); /* Chrome 10-25, Safari 5.1-6 */
+			background: linear-gradient(to left, #50C9C3 , #96DEDA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */     		
+}
 
 		.wrapper.style2 {
 			background-color: #fafafa;
