--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1593,8 +1593,8 @@
 		.wrapper.style1 {
 			background-image: none;
 			background: #50C9C3; /* fallback for old browsers */
-			background: -webkit-linear-gradient(#F8FFAE, #43C6AC); /* Chrome 10-25, Safari 5.1-6 */
-			background: linear-gradient(#F8FFAE, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */     		
+			background: -webkit-linear-gradient(#43C6AC, #F8FFAE); /* Chrome 10-25, Safari 5.1-6 */
+			background: linear-gradient(#43C6AC, #F8FFAE); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */     		
 }
 
 		.wrapper.style2 {
@@ -1604,13 +1604,13 @@
 
 		.wrapper.style3 {
 			text-shadow: 1px 1px 0px #fff;
-			background: #333; /* fallback for old browsers */
-			background: -webkit-linear-gradient(#43C6AC , #F8FFAE); /* Chrome 10-25, Safari 5.1-6 */
-			background: linear-gradient(#43C6AC , #F8FFAE); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */     		
+			background: #F8FFAE; /* fallback for old browsers */		
 		}
 
 		.wrapper.style4 {
-			background-color: #303030;
+			background: #333; /* fallback for old browsers */	
+			background: -webkit-linear-gradient(#F8FFAE, #43C6AC); /* Chrome 10-25, Safari 5.1-6 */
+			background: linear-gradient(#F8FFAE, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */     
 			color: #999;
 			text-shadow: -1px -1px 0px #181818;
 		}
