--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1779,7 +1779,7 @@
 				input[type="reset"].big,
 				button.big,
 				.button.big {
-					font-size: 1.5em;
+					/*font-size: 1.5em;*/
 					letter-spacing: -0.025em;
 				}
 
