--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1728,7 +1728,7 @@
 			}
 
 			h3 {
-				font-size: 1.5em;
+				/*font-size: 1.5em;*/
 				letter-spacing: -0.015em;
 			}
 
@@ -1798,7 +1798,7 @@
 					}
 
 				.box.style2 h3 {
-					margin-bottom: 0.25em;
+					/* margin-bottom: 0.25em; */
 				}
 
 				.box.style2 .image {
