--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1226,7 +1226,6 @@
 		border: solid 1px #ddd;
 		background: #fff;
 		color: #bbb;
-		box-shadow: inset 0px 2px 3px 1px rgba(0, 0, 0, 0.05), 0px 1px 0px 0px rgba(255, 255, 255, 0.025);
 		width: 100%;
 	}
 
@@ -1388,9 +1387,7 @@
 		outline: 0;
 		cursor: pointer;
 		border-radius: 8px;
-		text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
 		overflow: hidden;
-		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
 		background-color: #43B3E0;
 	}
 
@@ -1399,7 +1396,7 @@
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #55b9f3;
+			background-color: #8ae9ff;
 			color: #fff !important;
 		}
 
@@ -1614,7 +1611,7 @@
 
 		.wrapper.style1 {
 			background-image: none;
-			background: #00ddbb;
+			background: #109dee;
 }
 
 		.wrapper.style2 {
@@ -1628,7 +1625,7 @@
 		}
 
 		.wrapper.style4 {
-			background: #00ddbb;
+			background: #109dee;
 			color: #999;
 			text-shadow: none;
 		}
@@ -1798,7 +1795,6 @@
 				font-size: 1.1em;
 				border-radius: 50px;
 				background: #00507e; 
-				box-shadow: 5px 10px 25px #489dcf, -5px -10px 25px #62d5ff;
 			}
 			.no-box{box-shadow: none !important;}
 
